@@ -1,18 +1,23 @@
 Overview
 ========
 
-The ``z3c.jbot`` (or "Just a bunch of templates") package allows
-drop-in page template overrides. It works on Zope 2 and Zope 3. The
-Chameleon rendering engine is supported [#]_.
+The ``z3c.jbot`` (or "Just a bunch of templates") package allows easy
+customization of existing templates and images. It works on Zope 2 and
+Zope 3.
 
-Any template that is defined as a class-attribute can be overriden
-using jbot, e.g. those used in views, viewlets and portlets. The
-template overrides may be registered for any request layer or only a
-specific layer.
+The Chameleon rendering engine is supported [#]_.
 
-To override a particular template, first determine its *canonical
+Use of this package adds a small (2-3 ms per request on Plone) to the
+total application response time.
+
+.. [#] To enable Chameleon on Zope 2, use the ``five.pt`` package (CMF-apps like Plone should use ``cmf.pt`` which adds full support).
+
+Usage
+-----
+
+To override a particular file, first determine its *canonical
 filename*. It's defined as the path relative to the package within
-which the template is located; directory separators are replaced with
+which the file is located; directory separators are replaced with
 dots.
 
 Example:
@@ -30,10 +35,19 @@ use with jbot using a ZCML-directive::
       directory="<path>"
       layer="<layer>" />
 
-Use of this package adds a small (2-3 ms per request on Plone) to the
-total application response time.
+Templates in views, viewlets and portlets
+-----------------------------------------
 
-.. [#] To enable Chameleon on Zope 2, use the ``five.pt`` package (CMF-apps like Plone should use ``cmf.pt`` which adds full support).
+Any template that is defined as a class-attribute can be overriden
+using jbot, e.g. those used in views, viewlets and portlets. The
+template overrides may be registered for any request layer or only a
+specific layer.
+
+CMF objects
+-----------
+
+Any skin-object (e.g. images, templates) on the file system (directory
+views) can be overridden.
 
 Author
 ------
