@@ -1,6 +1,10 @@
 Changes
 =======
 
+In next release...
+
+- Added support for CMF skin objects.
+
 0.4 (2009-10-15)
 ----------------
 
